@@ -8,6 +8,9 @@
 
 	* src/iterators.c (igraph_i_eit_pairs, igraph_eit_create) : checks 
 	added
+
+	* src/iterators.c (igraph_vs_as_vector, igraph_vit_as_vector)
+	(igraph_es_as_vector, igraph_eit_as_vector) : added
 	
 2006-07-16  Gabor Csardi  <csardi@rmki.kfki.hu>
 
